<resources>
    <string name="app_name">LudiStreet</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="login_id">IDENTIFIANT</string>
    <string name="login_pass">MOT DE PASSE</string>
    <string name="login_confirm_pass">CONFIRMER LE MOT DE PASSE</string>
    <string name="title_activity_subscribe">SubscribeActivity</string>
    <string name="name">PRENOM</string>
    <string name="surname">NOM</string>
    <string name="email">E-MAIL</string>
    <string name="title_activity_nfcreader">NFCReader</string>
    <string name="title_activity_mode">ModeActivity</string>
    <string name="title_activity_nfctag">NFCTagActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="action_settings">Options</string>
</resources>
