<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/backgroundOrange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/sub_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/sub_surname"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_edit_text_white"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:fontFamily="Segoe UI"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sub_name"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5sp"
                    android:background="@drawable/rounded_edit_text_white"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:fontFamily="Segoe UI"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/sub_id"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_edit_text_white"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:fontFamily="Segoe UI"
                    android:hint="@string/login_id"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sub_password"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5sp"
                    android:background="@drawable/rounded_edit_text_white"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:fontFamily="Segoe UI"
                    android:hint="@string/login_pass"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/sub_confirm_password"
                android:layout_width="285dp"
                android:layout_height="40dp"
                android:layout_marginTop="5sp"
                android:background="@drawable/rounded_edit_text_white"
                android:cursorVisible="false"
                android:ems="10"
                android:fontFamily="Segoe UI"
                android:hint="@string/login_confirm_pass"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sub_email"
                android:layout_width="285dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text_white"
                android:cursorVisible="false"
                android:ems="10"
                android:fontFamily="Segoe UI"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/sub_validate"
                android:layout_width="285dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/confirm_subscribe" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
